--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -4,30 +4,30 @@
     <item
         android:id="@+id/tabCurrency"
         android:contentDescription="@string/crypto_currency"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_dollar"
         android:title="@string/crypto_currency" />
 
     <item
         android:id="@+id/tabExchange"
         android:contentDescription="@string/exchange"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_exchange_arrows"
         android:title="@string/exchange" />
 
     <item
         android:id="@+id/tabMetrics"
         android:contentDescription="@string/global_metrics"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_line_chart"
         android:title="@string/global_metrics" />
 
     <item
         android:id="@+id/tabTool"
         android:contentDescription="@string/tools"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_repairing_service"
         android:title="@string/tools" />
 
     <item
         android:id="@+id/tabPartner"
         android:contentDescription="@string/partners"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_partnership"
         android:title="@string/partners" />
 </menu>
