--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#1F1F2F</color>
+    <color name="colorPrimaryDark">#1A1927</color>
+    <color name="colorAccent">#ffff</color>
+    <color name="colorSaharaSand">#F4E88B</color>
+    <color name="colorPurpleHeart">#531DC7</color>
+    <color name="colorWhite">#FFFF</color>
 </resources>
