--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorSaharaSand">#F4E88B</color>
     <color name="colorPurpleHeart">#531DC7</color>
     <color name="colorWhite">#FFFF</color>
+    <color name="colorGunPowder">#40405F</color>
 </resources>
