--- a/app/src/main/res/layout/item_currency.xml
+++ b/app/src/main/res/layout/item_currency.xml
@@ -8,27 +8,28 @@
 
     <TextView
         android:id="@+id/tvRank"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_8dp"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginBottom="@dimen/margin_16dp"
+        android:gravity="center"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/text_16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="@dimen/text_12sp"
+        app:layout_constraintBottom_toBottomOf="@id/imgIcon"
+        app:layout_constraintEnd_toStartOf="@+id/imgIcon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="1" />
+        app:layout_constraintTop_toTopOf="@id/imgIcon"
+        tools:text="11" />
 
     <ImageView
         android:id="@+id/imgIcon"
-        app:layout_constraintTop_toTopOf="@id/tvRank"
-        app:layout_constraintBottom_toBottomOf="@id/tvRank"
-        app:layout_constraintStart_toEndOf="@+id/tvRank"
-        android:layout_marginStart="@dimen/margin_8dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/ic_line_chart"/>
-
+        android:layout_width="@dimen/size_24dp"
+        android:layout_height="@dimen/size_24dp"
+        android:layout_marginStart="@dimen/margin_28dp"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:layout_marginBottom="@dimen/margin_16dp"
+        android:contentDescription="@string/coin_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_line_chart" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
