--- a/feature-currency/src/main/res/layout/item_currency.xml
+++ b/feature-currency/src/main/res/layout/item_currency.xml
@@ -6,6 +6,18 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/imgIcon"
+        android:layout_width="@dimen/size_32dp"
+        android:layout_height="@dimen/size_32dp"
+        android:layout_marginStart="@dimen/margin_28dp"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:layout_marginBottom="@dimen/margin_16dp"
+        android:contentDescription="@string/coin_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvRank"
         android:layout_width="0dp"
@@ -18,19 +30,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/imgIcon"
         tools:text="11" />
-
-    <ImageView
-        android:id="@+id/imgIcon"
-        android:layout_width="@dimen/size_32dp"
-        android:layout_height="@dimen/size_32dp"
-        android:layout_marginStart="@dimen/margin_28dp"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginBottom="@dimen/margin_16dp"
-        android:contentDescription="@string/coin_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_line_chart" />
 
     <TextView
         android:id="@+id/tvCoinName"
@@ -56,12 +55,12 @@
 
     <TextView
         android:id="@+id/tvPrice"
-        app:layout_constraintTop_toTopOf="@id/imgIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_28dp"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/text_12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:layout_constraintTop_toTopOf="@id/imgIcon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
