--- a/feature-currency/src/main/res/layout/fragment_coin_detail.xml
+++ b/feature-currency/src/main/res/layout/fragment_coin_detail.xml
@@ -18,7 +18,9 @@
             android:id="@+id/btnBuy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/buy"
+            android:paddingStart="@dimen/margin_16dp"
+            android:paddingEnd="@dimen/margin_16dp"
+            android:text="@string/go_to_purchase"
             android:textColor="@color/colorWhite"
             android:background="@color/colorDolphin"
             app:layout_constraintStart_toStartOf="@+id/tvPrice"
