--- a/feature-currency/src/main/res/layout/fragment_coin_detail.xml
+++ b/feature-currency/src/main/res/layout/fragment_coin_detail.xml
@@ -26,6 +26,21 @@
             app:layout_constraintStart_toStartOf="@+id/tvPrice"
             app:layout_constraintTop_toBottomOf="@+id/tvPrice" />
 
+        <Button
+            android:id="@+id/btnRetry"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/margin_16dp"
+            android:paddingEnd="@dimen/margin_16dp"
+            android:text="@string/retry"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorDolphin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
 
         <ImageView
             android:id="@+id/imgIcon"
